@@ -1,3 +1,5 @@
+ 06/22/2002 Al Riddoch <alriddoch@zepler.org>,
+    -Removed "using namespace std" from header.
  06/11/2002 Ron Steinke <rsteinke@w-link.net>,
     -Added a timeout version of the tcp_socket_stream
      constructor, which wraps the timeout version
